--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
         </div>
         <nav class="d-none d-lg-flex gap-lg-4 col-lg-6 justify-content-lg-start">
           <a href="/" class="text-decoration-none text-white  active">Home</a>
-          <a href="#" class="text-decoration-none text-white">Movis</a>
-          <a href="#" class="text-decoration-none text-white">Tv Show</a>
-          <a href="#" class="text-decoration-none text-white">pricing</a>
-          <a href="#" class="text-decoration-none text-white">Contact</a>
+          <a href="./pages/movies-page.html" class="text-decoration-none text-white">Movis</a>
+          <a href="./pages/TVshow-page.html" class="text-decoration-none text-white">Tv Show</a>
+          <a href="./pages/pricing-page.html" class="text-decoration-none text-white">pricing</a>
+          <a href="./pages/contact-page.html" class="text-decoration-none text-white">Contact</a>
         </nav>
         <div
           class="col-3 d-none d-lg-flex justify-content-lg-end align-items-lg-center"
@@ -94,15 +94,15 @@
               </h1>
             </div>
             <nav class="col-12 d-flex flex-column align-items-center mb-5">
-              <a href="#" class="text-decoration-none text-white mb-4 active">Home</a>
-              <a href="#" class="text-decoration-none text-white mb-4">Movis</a>
-              <a href="#" class="text-decoration-none text-white mb-4"
+              <a href="/" class="text-decoration-none text-white mb-4 active">Home</a>
+              <a href="./pages/movies-page.html" class="text-decoration-none text-white mb-4">Movis</a>
+              <a href="./pages/TVshow-page.html" class="text-decoration-none text-white mb-4"
                 >Tv Show</a
               >
-              <a href="#" class="text-decoration-none text-white mb-4"
+              <a href="./pages/pricing-page.html" class="text-decoration-none text-white mb-4"
                 >pricing</a
               >
-              <a href="#" class="text-decoration-none text-white mb-5"
+              <a href="./pages/contact-page.html" class="text-decoration-none text-white mb-5"
                 >Contact</a
               >
             </nav>
@@ -876,7 +876,7 @@
             />
             <div class="info">
               <h5 class="text-white m0 fs-6">
-                The Lord of the Rings: The Return of the King ( 2003 )
+                The Lord of the Rings ( 2003 )
               </h5>
               <p class="text-secondary" style="font-size: 12px">Sci-Fi</p>
             </div>
