--- a/pages/pricing-page.html
+++ b/pages/pricing-page.html
@@ -24,7 +24,7 @@
                 </h1>
             </div>
             <nav class="d-none d-lg-flex gap-lg-4 col-lg-6 justify-content-lg-start">
-                <a href="/" class="text-decoration-none text-white">Home</a>
+                <a href="../index.html" class="text-decoration-none text-white">Home</a>
                 <a href="./movies-page.html" class="text-decoration-none text-white">Movis</a>
                 <a href="./TVshow-page.html" class="text-decoration-none text-white">Tv Show</a>
                 <a href="./pricing-page.html" class="text-decoration-none text-white active">pricing</a>
@@ -59,7 +59,7 @@
                         </h1>
                     </div>
                     <nav class="col-12 d-flex flex-column align-items-center mb-5">
-                        <a href="/" class="text-decoration-none text-white mb-4">Home</a>
+                        <a href="../index.html" class="text-decoration-none text-white mb-4">Home</a>
                         <a href="./movies-page.html" class="text-decoration-none text-white mb-4">Movis</a>
                         <a href="./TVshow-page.html" class="text-decoration-none text-white mb-4">Tv Show</a>
                         <a href="./pricing-page.html" class="text-decoration-none text-white mb-4 active">pricing</a>
